<resources>
    <string name="app_name">Chess_Android_56</string>
    <string name="action_settings">Settings</string>
    <string name="background">Background</string>
    <string name="exit">Exit</string>
    <string name="history">History</string>
    <string name="new_game">New Game</string>
    <string name="resign">Resign</string>
    <string name="undo">Undo</string>
    <string name="ai">AI</string>
    <string name="draw">Draw</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="chess_board">Chess Board</string>
    <string name="WhiteWins">White Wins</string>
    <string name="finish">Finish</string>
    <string name="black_wins">Black Wins</string>
    <string name="wallpaper">wallPaper</string>
</resources>
