<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/newGame"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="233dp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/history"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newGame"
        android:layout_alignStart="@+id/newGame"
        android:layout_alignTop="@+id/newGame"
        android:layout_marginTop="61dp"
        android:text="@string/history" />

    <Button
        android:id="@+id/exit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/history"
        android:layout_alignStart="@+id/history"
        android:layout_below="@+id/history"
        android:layout_marginTop="16dp"
        android:text="@string/exit" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background" />
</RelativeLayout>