<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context="com.cs213.androidproject.chess_android_56.Controller.EndGame">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wallpaper"
            app:srcCompat="@drawable/win" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/graphicBoard"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/chess_board"
            app:srcCompat="@drawable/graphboard" />

        <GridLayout
            android:id="@+id/boardLayout"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:columnCount="8"
            android:rowCount="8">

            <ImageView
                android:id="@+id/a8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackrook" />

            <ImageView
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/blackknight" />

            <ImageView
                android:id="@+id/c8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackbishop" />

            <ImageView
                android:id="@+id/d8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackqueen" />

            <ImageView
                android:id="@+id/e8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackking" />

            <ImageView
                android:id="@+id/f8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/blackbishop" />

            <ImageView
                android:id="@+id/g8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackknight" />

            <ImageView
                android:id="@+id/h8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackrook" />

            <ImageView
                android:id="@+id/a7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/b7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/c7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/d7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/e7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/f7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/g7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/h7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/blackpawn" />


            <ImageView
                android:id="@+id/a6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/b6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/c6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/d6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/e6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/f6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/g6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/h6"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/a5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />


            <ImageView
                android:id="@+id/b5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/c5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/d5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/e5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/f5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/g5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/h5"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/a4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/b4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/c4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/d4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/e4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/f4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/g4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/h4"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/a3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/b3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/c3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/d3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/e3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/f3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/g3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/h3"
                android:layout_width="45dp"
                android:layout_height="45dp"
 />

            <ImageView
                android:id="@+id/a2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/b2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/c2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/d2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/e2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/f2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/g2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/h2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/a1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whiterook" />

            <ImageView
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/whiteknight" />

            <ImageView
                android:id="@+id/c1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitebishop" />

            <ImageView
                android:id="@+id/d1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whitequeen" />

            <ImageView
                android:id="@+id/e1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whiteking" />

            <ImageView
                android:id="@+id/f1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/whitebishop" />

            <ImageView
                android:id="@+id/g1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whiteknight" />

            <ImageView
                android:id="@+id/h1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/whiterook" />

        </GridLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/goBack"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_below="@+id/whoWins"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:fontFamily="serif"
            android:text="@string/finish"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/whoWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="198dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="10sp"
            android:text="@string/black_wins"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorWhite"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_below="@+id/goBack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:onClick="saveGame"
            android:text="Save Game"
            android:textSize="14sp" />
    </RelativeLayout>



</RelativeLayout>
