<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.cs213.androidproject.chess_android_56.Controller.NewGameActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="visible">


        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="onClickNextButton"
            android:text="Next" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/player1"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="415dp"
            android:text="@string/player2"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:id="@+id/graphicBoard"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/chess_board"
            app:srcCompat="@drawable/graphboard" />

        <GridLayout
            android:id="@+id/boardLayout"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:columnCount="8"
            android:rowCount="8">

            <ImageView
                android:id="@+id/a8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackrook" />

            <ImageView
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackknight" />

            <ImageView
                android:id="@+id/c8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackbishop" />

            <ImageView
                android:id="@+id/d8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackqueen" />

            <ImageView
                android:id="@+id/e8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackking" />

            <ImageView
                android:id="@+id/f8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackbishop" />

            <ImageView
                android:id="@+id/g8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackknight" />

            <ImageView
                android:id="@+id/h8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackrook" />

            <ImageView
                android:id="@+id/a7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/b7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/c7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/d7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/e7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/f7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/g7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />

            <ImageView
                android:id="@+id/h7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/blackpawn" />


            <ImageView
                android:id="@+id/a6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/b6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/c6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/d6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/e6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/f6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/g6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/h6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/a5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />


            <ImageView
                android:id="@+id/b5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/c5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/d5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/e5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/f5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/g5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/h5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/a4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/b4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/c4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/d4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/e4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/f4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/g4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/h4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/a3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/b3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/c3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/d3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/e3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/f3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/g3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/h3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick" />

            <ImageView
                android:id="@+id/a2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/b2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/c2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/d2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/e2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/f2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/g2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/h2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitepawn" />

            <ImageView
                android:id="@+id/a1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whiterook" />

            <ImageView
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whiteknight" />

            <ImageView
                android:id="@+id/c1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitebishop" />

            <ImageView
                android:id="@+id/d1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitequeen" />

            <ImageView
                android:id="@+id/e1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whiteking" />

            <ImageView
                android:id="@+id/f1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whitebishop" />

            <ImageView
                android:id="@+id/g1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whiteknight" />

            <ImageView
                android:id="@+id/h1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="ImageOnClick"
                app:srcCompat="@drawable/whiterook" />

        </GridLayout>


    </RelativeLayout>

</LinearLayout>